--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,9 @@
 
 
 
-
+<div class="container">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure necessitatibus libero ea quos sed adipisci quae reiciendis quisquam dolorem amet unde possimus molestias rerum commodi, ratione corrupti hic omnis? In hic earum optio nisi, eligendi, perspiciatis temporibus rem, corporis quidem illo sunt eum obcaecati. Ipsum consequuntur labore nam voluptatibus a repellendus fugit voluptate qui cumque. Minus dolorem vero nihil vel quo placeat voluptatem earum unde ut velit quisquam quas aut nulla eveniet suscipit, doloremque delectus aliquam quam. Iste, consequuntur nesciunt.
+</div>
 
 
 <%- include("./partials/footer")  %>
